--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ input[type=text], select, textarea {
 }
 
 /* Style the submit button with a specific background color etc */
-input[type=submit] {
+button[type=submit] {
   background-color: rgb(53, 36, 138);;
   color: white;
   padding: 12px 20px;
@@ -383,7 +383,7 @@ input[type=submit] {
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
-input[type=submit]:hover {
+button[type=submit]:hover {
   background-color: rgb(149, 89, 204);
 }
 
